--- a/rir_notifier.info.yml
+++ b/rir_notifier.info.yml
@@ -3,3 +3,4 @@ type: module
 description: 'This module handles RiR subscriptions to search notifications.'
 package: RIR Custom Modules
 core: 8.x
+version: '8.x-1.0'
