--- a/rir_notifier.libraries.yml
+++ b/rir_notifier.libraries.yml
@@ -6,5 +6,6 @@ rir_scripts:
     - core/jquery
     - core/drupal.ajax
     - core/drupal
+    - core/form
     - core/drupalSettings
     - core/jquery.once
