--- a/rir_notifier.libraries.yml
+++ b/rir_notifier.libraries.yml
@@ -4,6 +4,7 @@ rir_scripts:
     js/scripts.js: {}
   dependencies:
     - core/jquery
+    - modal/modal
     - core/drupal.ajax
     - core/drupal
     - core/drupalSettings
