--- a/rir_notifier.info.yml
+++ b/rir_notifier.info.yml
@@ -2,5 +2,5 @@ name: RiR Notifier
 description: 'This module handles RiR subscriptions to search notifications.'
 package: RIR Custom Modules
 
-type: custom-module
+type: module
 core: 8.x
