--- a/rir_notifier.routing.yml
+++ b/rir_notifier.routing.yml
@@ -5,6 +5,7 @@ rir_notifier.open_subscription_modal:
     _controller: '\Drupal\rir_notifier\Controller\NotifierController::openSubscriptionModal'
   requirements:
     _access: 'TRUE'
+    js: 'nojs|ajax'
 
 rir_notifier.admin_settings:
   path: '/admin/config/rir_notifier'
