--- a/rir_notifier.libraries.yml
+++ b/rir_notifier.libraries.yml
@@ -3,8 +3,5 @@ rir_scripts:
   js:
     js/scripts.js: {}
   dependencies:
-    - core/jquery
-    - core/jquery.once
-    - core/drupal
-    - core/drupal.ajax
-    - core/drupalSettings
+    'core/drupal.dialog.ajax',
+    'core/jquery.form'
