--- a/rir_notifier.routing.yml
+++ b/rir_notifier.routing.yml
@@ -4,7 +4,8 @@ rir_notifier.open_subscription_modal:
     _title: 'Modal Form'
     _controller: '\Drupal\rir_notifier\Controller\NotifierController::openSubscriptionModal'
   requirements:
-    _permission: 'bypass node access'
+    _permission: 'access content overview'
+    js: 'nojs|ajax'
 
 rir_notifier.admin_settings:
   path: '/admin/config/rir_notifier'
