--- a/rir_notifier.libraries.yml
+++ b/rir_notifier.libraries.yml
@@ -4,7 +4,7 @@ rir_scripts:
     js/scripts.js: {}
   dependencies:
     - core/jquery
-    - core/jquery.once
+    - core/drupal.ajax
     - core/drupal
-    - core/drupal.dialog.ajax
     - core/drupalSettings
+    - core/jquery.once
