--- a/rir_notifier.libraries.yml
+++ b/rir_notifier.libraries.yml
@@ -5,7 +5,7 @@ rir_scripts:
   dependencies:
     - core/jquery
     - core/jquery.once
-    - core/drupal.dialog.ajax
+    - core/jquery.ui.modal
     - core/drupal.ajax
     - core/drupal
     - core/drupalSettings
