--- a/rir_notifier.services.yml
+++ b/rir_notifier.services.yml
@@ -2,3 +2,5 @@ services:
   rir_notifier.data_accessor:
     class: Drupal\rir_notifier\Service\DataAccessor
     arguments: ["@entity_type.manager"]
+  rir_notifier.security_service:
+    class: Drupal\rir_notifier\Service\SecurityService
