--- a/rir_notifier.routing.yml
+++ b/rir_notifier.routing.yml
@@ -1,7 +1,15 @@
 rir_notifier.admin_settings:
   path: '/admin/config/rir_notifier'
   defaults:
-    _form: '\Drupal\rir_notifier\Form\MailchimpAlertsConfigForm'
-    _title: 'Mailchimp alerts configuration'
+    _form: '\Drupal\rir_notifier\Form\CampaignAlertsConfigForm'
+    _title: 'Campaign alerts configuration'
   requirements:
     _permission: 'administer site configuration'
+
+rir_notifier.campaing_unsubscription:
+  path: '/unsubscribe'
+  defaults:
+    _form: '\Drupal\rir_notifier\Form\CampaignUnsubscriptionForm'
+    _title: 'Campaign unsubscription'
+  requirements:
+    _permission: 'access content'
