--- a/rir_notifier.info.yml
+++ b/rir_notifier.info.yml
@@ -5,6 +5,7 @@ configure: rir_notifier.admin_settings
 
 type: module
 core: 8.x
+core_version_requirement: ^8 || ^9
 
 dependencies:
   - webform:webform
