--- a/rir_notifier.info.yml
+++ b/rir_notifier.info.yml
@@ -12,3 +12,5 @@ dependencies:
   - twig_tweak:twig_tweak
   - publication_date:publication_date
   - rir_interface:rir_interface
+version: '8.x-1.0'
+project: 'rir_notifier'
